@@ -1,3 +1,8 @@
+2007-03-25 Borut Razem <borut.razem AT siol.net>
+
+	* bin/dcf.sh: added Distributed Compile Farm
+	* crontab.txt: updated
+
 2007-03-20 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.readline/Makefile:
